--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -26,7 +26,7 @@ library(ggplot2)
 
 ## Goal
 
-The goal here is to outline in a couple of paragraphs and few lines of code some simple ways in which we can use the [Windsor.ai](https://www.windsor.ai/) API and `R` package `facebookadsR` to gain insights into marketing campaign performance in Facebook Ads. The nice thing about Windsor.ai is that you can have all of your marketing channels aggregating in a single place and then access all data at once using this package. In this case, however, the package is focused on getting data from Facebook Ads campaings. Of course, once the data is in `R` you can do much more than the examples below, and work on analysis, predictions or dashboards.
+The goal here is to outline in a couple of paragraphs and few lines of code some simple ways in which we can use the [Windsor.ai](https://windsor.ai/) API and `R` package `facebookadsR` to gain insights into marketing campaign performance in Facebook Ads. The nice thing about Windsor.ai is that you can have all of your marketing channels aggregating in a single place and then access all data at once using this package. In this case, however, the package is focused on getting data from Facebook Ads campaings. Of course, once the data is in `R` you can do much more than the examples below, and work on analysis, predictions or dashboards.
 
 ## Getting data from Facebook ads into R
 
